--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -74,7 +74,7 @@ $black: #2b2523
 .navbar-item .icon
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
-.icon svg
+.icon jpg
   width: 3rem
   height: 3rem
   fill: currentColor
