--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -74,9 +74,8 @@ $black: #2b2523
 .navbar-item .icon
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
-.icon jpg
-  width: 3rem
-  height: 3rem
+.icon img
+  width: 150px
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 2rem
