--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,6 +73,7 @@ $black: #2b2523
 
 .navbar-item .icon
   color: $primary
+  width: 150px
 // Override for use of svg's from https://simpleicons.org/
 .icon img
   width: 150px
