--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,10 +73,10 @@ $black: #2b2523
 
 .navbar-item .icon
   color: $primary
-  width: 150px
+  height: 150px
 // Override for use of svg's from https://simpleicons.org/
 .icon img
-  width: 150px
+  height: 150px
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 2rem
