--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,13 +73,13 @@ $black: #2b2523
 
 .navbar-item .icon
   color: $primary
-  height: 150px
-  width: 150px
+  height: 3rem
+  width: 3rem
   padding: 0 2rem
 // Override for use of svg's from https://simpleicons.org/
 .icon img
-  height: 150px
-  width: 150px
+  height: 3rem
+  width: 3rem
   padding: 0 2rem
   fill: currentColor
 .navbar-brand .navbar-item.logo
