--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -71,13 +71,12 @@ $black: #2b2523
 .margin-top-0
   margin-top: 0 !important
 
-.navbar-item .icon
-  color: $primary
-  width: 20%
 // Override for use of svg's from https://simpleicons.org/
-.icon img
-  width: 20%
-  fill: currentColor
+.unicorn img
+  height: 80px
+  width: 100px
+  border-radius: 25%
+  opacity: .85
 .navbar-brand .navbar-item.logo
   padding: 0 2rem
 footer.footer
