--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -63,8 +63,8 @@ $black: #2b2523
     font-weight: 700
     color: #CC3700
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #EDD7B1
+    box-shadow: inset 0 0 0 2px #EDD7B1
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -77,11 +77,16 @@ $black: #2b2523
   width: 100px
   border-radius: 25%
   opacity: .85
+.navbar-item 
+  height: fit-content
+  margin: auto
+  border-radius: 2%
 .navbar-brand .navbar-item.logo
   padding: 0 2rem
 footer.footer
-  padding: 3rem 0rem 0rem
-  background-color: transparent
+  padding: 2rem 0rem 0rem
+footer.footerBG
+  background-color: #FAF3E7;
 
 //Menu overrides
 $menu-item-color: $white-ter
@@ -113,7 +118,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #F6D7D4;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
